Fill Command Enum